# frameflow

./: .gitignore  LICENSE  README.md  pyproject.toml
src/frameflow/: __init__.py  session.py
src/frameflow/adapters/: base.py
src/frameflow/adapters/pandas/: __init__.py  adapter.py
src/frameflow/api/: dataframe.py
src/frameflow/core/: contracts.py
src/frameflow/execution/: selector.py
tests/: test_session.py
