[project]
name = "frameflow"
version = "0.0.1"
description = "Backend-agnostic dataframe execution framework"
authors = [{name = "Mukovhe Mukwevho"}]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.3.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
